...
    android:padding="16dp"
    android:background="#1F1F1F">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Filter by"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"/>

    <RadioGroup
...

        <Button
            android:id="@+id/theme_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Apply"
            android:textColor="#8A73DF"
            android:background="@android:color/transparent"/>
    </LinearLayout>
</LinearLayout>
