...
            android:padding="12dp"
            android:src="@drawable/arrow_back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/filter_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_above="@+id/mood_list"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="22dp"
            android:background="?attr/selectableItemBackgroundBorderless"
...
