...
            android:layout_weight="1"
            android:text="Most Recent Week"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/check_recent_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Filter by Mood -->
    <LinearLayout
...
